Set correct icon colors; fix spacings and minor styling of about me

--- a/frontend/src/assets/scss/dark.module.scss
+++ b/frontend/src/assets/scss/dark.module.scss
@@ -1,5 +1,5 @@
 $background-color: #000;
-$surface-color: rgb(126 166 214);
+$surface-color: #3D4753;
 $primary-color: #f09630;
 $secondary-color: #3d4753;
 $error-color: #f44336;
@@ -10,6 +10,7 @@ $border-color: #d6dfe9;
 $border-opacity: 0.4;
 $font-color: #222;
 $icon-color: #F5F5F5;
+$cockpit-highlight-color: #2ca5b1;
 $icon-background: rgb(61 71 83 / 85%);
 $bottom-menu-background: rgb(78 91 107 / 60%);
 $sidebar-background: rgb(61 71 83 / 90%);
@@ -31,6 +32,7 @@ $cockpit-chip-background: rgb(61 71 83);
     borderOpacity: $border-opacity;
     fontColor: $font-color;
     iconColor: $icon-color;
+    cockpitHighlightColor: $cockpit-highlight-color;
     iconBackground: $icon-background;
     bottomMenuBackground: $bottom-menu-background;
     sidebarBackground: $sidebar-background;
