--- a/frontend/src/assets/scss/light.module.scss
+++ b/frontend/src/assets/scss/light.module.scss
@@ -10,6 +10,7 @@ $border-color: #d6dfe9;
 $border-opacity: 1;
 $font-color: #222;
 $icon-color: #3D4753;
+$cockpit-highlight-color: #2ca5b1;
 $icon-background: rgb(255 255 255);
 $bottom-menu-background: rgb(225 230 237 / 60%);
 $sidebar-background: rgb(225 230 237);
@@ -31,6 +32,7 @@ $cockpit-chip-background: rgb(225 230 237);
     borderOpacity: $border-opacity;
     fontColor: $font-color;
     iconColor: $icon-color;
+    cockpitHighlightColor: $cockpit-highlight-color;
     iconBackground: $icon-background;
     bottomMenuBackground: $bottom-menu-background;
     sidebarBackground: $sidebar-background;
